--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon devStart server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/LoukasGP/ecommerce-app-rest-api/issues"
   },
-  "homepage": "https://github.com/LoukasGP/ecommerce-app-rest-api#readme"
+  "homepage": "https://github.com/LoukasGP/ecommerce-app-rest-api#readme",
+  "dependencies": {
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15"
+  }
 }
