--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
   },
   "homepage": "https://github.com/LoukasGP/ecommerce-app-rest-api#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.1"
+    "passport-local": "^1.0.0",
+    "pg": "^8.7.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   }
 }
