--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/LoukasGP/ecommerce-app-rest-api#readme",
   "dependencies": {
+    "@nestjs/passport": "^8.0.1",
+    "@types/passport": "^1.0.7",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
@@ -27,6 +29,8 @@
     "express-session": "^1.17.2",
     "heroku": "^7.59.2",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "shortid": "^2.2.16",
