--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/passport": "^1.0.7",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "connect-pg-simple": "^7.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
