--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-promise-router": "^4.1.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "heroku": "^7.59.2",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "shortid": "^2.2.16",
