--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "heroku": "^7.59.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
